Added first rack setup descriptor to cfg file

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -2,8 +2,24 @@
 "system": {
 	"threads": {
 		"cycle":120,
-		"workers": 6,
+		"workers": 3,
 		"worker_us": 250
+	}
+},
+
+"rack": {
+	"ac1" : {
+		"jack": "power",
+		
+		"FlacLoad" : {
+			"audio_out": {
+				"jack": "audio",
+				
+				"Alsa" : {
+				
+				}
+			}
+		}
 	}
 }
 
