Implemented a little more of the rack setup parsing

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -1,23 +1,35 @@
 {
 "system": {
 	"threads": {
-		"cycle":120,
-		"workers": 3,
-		"worker_us": 250
+		"cycle" : 120,
+		"workers" : 3,
+		"worker_us" : 250
 	}
 },
 
 "rack": {
 	"ac1" : {
-		"jack": "power",
+		"connections" : [
+			{
+			"plug" : "ac1",
+			"unit" : "FlacLoad",
+			"name" : "fl1",
+			"jack" : "power"
+			}
+		],
 		
 		"FlacLoad" : {
-			"audio_out": {
-				"jack": "audio",
-				
-				"Alsa" : {
-				
+			"name" : "fl1",
+			"connections" :[
+				{
+				"plug": "audio_out",
+				"unit": "Alsa",
+				"jack": "audio"
 				}
+			],
+			
+			"Alsa": {
+			
 			}
 		}
 	}
