Basic rack setup pulled from config file

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -10,26 +10,17 @@
 "rack": {
 	"ac1" : {
 		"connections" : [
-			{
-			"plug" : "ac1",
-			"unit" : "FlacLoad",
-			"name" : "fl1",
-			"jack" : "power"
-			}
+			{ "plug" : "ac1", "unit" : "FlacLoad", "name" : "fl1", "jack" : "power" }
 		],
 		
-		"FlacLoad" : {
-			"name" : "fl1",
+		"fl1" : {
+			"unit" : "FlacLoad",
 			"connections" :[
-				{
-				"plug": "audio_out",
-				"unit": "Alsa",
-				"jack": "audio"
-				}
+				{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
 			],
 			
-			"Alsa": {
-			
+			"alsa1": {
+				"unit" : "Alsa"
 			}
 		}
 	}
