--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -19,6 +19,10 @@
 				{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
 			],
 			
+			"config" : {
+				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+			},
+			
 			"alsa1": {
 				"unit" : "Alsa"
 			}
