Added another ac plug

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -2,7 +2,7 @@
 "system": {
 	"threads": {
 		"cycle" : 120,
-		"workers" : 3,
+		"workers" : 6,
 		"worker_us" : 250
 	}
 },
@@ -20,14 +20,34 @@
 			],
 			
 			"config" : {
-				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
 			},
 			
 			"alsa1": {
 				"unit" : "Alsa"
 			}
 		}
-	}
+	},
+	"ac2" : {
+			"connections" : [
+				{ "plug" : "ac2", "unit" : "FlacLoad", "name" : "fl2", "jack" : "power" }
+			],
+			
+			"fl2" : {
+				"unit" : "FlacLoad",
+				"connections" :[
+					{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa2", "jack": "audio" }
+				],
+				
+				"config" : {
+					"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+				},
+				
+				"alsa2": {
+					"unit" : "Alsa"
+				}
+			}
+		}
 }
 
 }
