Started implementing async callback for alsa - finding bottleneck when buffer is empty

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -2,8 +2,8 @@
 "system": {
 	"threads": {
 		"cycle" : 120,
-		"workers" : 6,
-		"worker_us" : 250
+		"workers" : 12,
+		"worker_us" : 25
 	}
 },
 
@@ -20,7 +20,8 @@
 			],
 			
 			"config" : {
-				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
+				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
+				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
 			},
 			
 			"alsa1": {
