Adding buffer details

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -27,7 +27,8 @@
 			"alsa1": {
 				"unit" : "Alsa",
 				"config": {
-					"latency" : "20"
+					"period" : "20",
+					"buffer" : "4096"
 				}
 			}
 		}
