Getting closer again

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -27,8 +27,9 @@
 			"alsa1": {
 				"unit" : "Alsa",
 				"config": {
-					"period" : "20",
-					"buffer" : "4096"
+					"period" : "2048",
+					"max_periods" : "4",
+					"unit_buffer" : "4096"
 				}
 			}
 		}
