Tested successfuly with two daisychains on the rack

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -20,8 +20,7 @@
 			],
 			
 			"config" : {
-				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
-				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
 			},
 			
 			"alsa1": {
@@ -34,6 +33,7 @@
 			}
 		}
 	}
+	
 }
 
 }
