Added skeleton of echo unit

--- a/system/rackoonio.cfg
+++ b/system/rackoonio.cfg
@@ -16,19 +16,26 @@
 		"fl1" : {
 			"unit" : "FlacLoad",
 			"connections" :[
-				{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+				{ "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
 			],
 			
 			"config" : {
 				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
 			},
 			
-			"alsa1": {
-				"unit" : "Alsa",
-				"config": {
-					"period" : "2048",
-					"max_periods" : "6",
-					"unit_buffer" : "4096"
+			"echo1" : {
+				"unit" : "Echo",
+				"connections" :[
+					{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+				],
+
+				"alsa1": {
+					"unit" : "Alsa",
+					"config": {
+						"period" : "2048",
+						"max_periods" : "6",
+						"unit_buffer" : "4096"
+					}
 				}
 			}
 		}
