Moved config file to root

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -29,6 +29,10 @@
 					{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
 				],
 
+				"config" : {
+					"delay" : "200"
+				},
+
 				"alsa1": {
 					"unit" : "Alsa",
 					"config": {
