Got single replay echo but it's clicky; dumping echo buffer

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -20,7 +20,8 @@
 			],
 			
 			"config" : {
-				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
+				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
+				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
 			},
 			
 			"echo1" : {
@@ -30,7 +31,7 @@
 				],
 
 				"config" : {
-					"delay" : "200"
+					"delay" : "500"
 				},
 
 				"alsa1": {
