Levels unit is a functional pass-through unit

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -16,31 +16,39 @@
 		"fl1" : {
 			"unit" : "FlacLoad",
 			"connections" :[
-				{ "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
+				{ "plug": "audio_out", "unit": "Levels", "name" : "levels1", "jack": "audio" }
 			],
 			
 			"config" : {
 				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
 				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
 			},
-			
-			"echo1" : {
-				"unit" : "Echo",
-				"connections" :[
-					{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+
+			"levels1" : {
+				"unit" : "Levels",
+				
+				"connections" : [
+					{ "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
 				],
+			
+				"echo1" : {
+					"unit" : "Echo",
+					"connections" :[
+						{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+					],
 
-				"config" : {
-					"delay" : "500",
-					"decay" : "0.6"
-				},
+					"config" : {
+						"delay" : "500",
+						"decay" : "0.6"
+					},
 
-				"alsa1": {
-					"unit" : "Alsa",
-					"config": {
-						"period" : "2048",
-						"max_periods" : "6",
-						"unit_buffer" : "4096"
+					"alsa1": {
+						"unit" : "Alsa",
+						"config": {
+							"period" : "2048",
+							"max_periods" : "6",
+							"unit_buffer" : "4096"
+						}
 					}
 				}
 			}
