Implementing midi config in the configuration state of startup

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -22,6 +22,10 @@
 			"connections" :[
 				{ "plug": "audio_out", "unit": "Levels", "name" : "levels1", "jack": "audio" }
 			],
+
+			"bindings" : {
+				"pause" : { "module": "LaunchControl" , "code":41 }
+			},
 			
 			"config" : {
 				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
