Added master gain midi binding

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -38,7 +38,11 @@
 				"connections" : [
 					{ "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
 				],
-			
+
+				"bindings" : {
+					"masterGain" : { "module": "LaunchControl" , "code":56 }
+				},
+
 				"echo1" : {
 					"unit" : "Echo",
 					"connections" :[
