--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -51,7 +51,11 @@
 
 					"config" : {
 						"delay" : "500",
-						"decay" : "0.6"
+						"decay" : "0.0"
+					},
+
+					"bindings" : {
+						"feedbackDecay" : { "module": "LaunchControl" , "code":36 }
 					},
 
 					"alsa1": {
