--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -12,67 +12,83 @@
 },
 
 "rack": {
-	"ac1" : {
-		"connections" : [
-			{ "plug" : "ac1", "unit" : "FlacLoad", "name" : "fl1", "jack" : "power" }
-		],
-		
-		"fl1" : {
-			"unit" : "FlacLoad",
-			"connections" :[
-				{ "plug": "audio_out", "unit": "Levels", "name" : "levels1", "jack": "audio" }
-			],
+	"mainlines" : [{"plug":"ac1"}, {"plug":"ac2"}],
+	"daisychains" : [
+		{ "from" : "rack", "plug" : "ac1", "unit" : "FlacLoad", "name" : "fl1", "jack" : "power" },
+		{ "from" : "rack", "plug" : "ac2", "unit" : "FlacLoad", "name" : "fl2", "jack" : "power" },
 
-			"bindings" : {
-				"pause" : { "module": "LaunchControl" , "code":41 }
-			},
+		{ "from" : "fl1", "plug": "audio_out", "unit": "Levels", "name" : "levels1", "jack": "audio" },
+		{ "from" : "fl2", "plug": "audio_out", "unit": "Levels", "name" : "levels2", "jack": "audio" },
+
+		{ "from" : "levels1", "plug": "audio_out", "unit": "ChannelMixer", "name" : "mixer1", "jack": "channel_1" },
+		{ "from" : "levels2", "plug": "audio_out", "unit": "ChannelMixer", "name" : "mixer1", "jack": "channel_2" },
+
+		{ "from" : "mixer1", "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
+
+		{ "from" : "echo1", "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+	],
+
+	"fl1" : {
+		"unit" : "FlacLoad",
+		"bindings" : {
+			"pause" : { "module": "LaunchControl" , "code":41 }
+		},
+
+		"config" : {
+			"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
+			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
+			"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+		}
+	},
+
+	"levels1" : {
+		"unit" : "Levels",
+		"bindings" : { 
+			"masterGain" : { "module": "LaunchControl" , "code":56 } 
+		}
+	},
+
+	"mixer1" : {
+		"unit" : "ChannelMixer"
+	},
+
+	"echo1" : {
+		"unit" : "Echo",
+		"config" : { 
+			"delay" : "500", "decay" : "0.0" 
+		},
+		"bindings" : { 
+			"feedbackDecay" : { "module": "LaunchControl" , "code":36 } 
+		}
+	},
+	
+	"alsa1": {
+		"unit" : "Alsa",
+		"config": {
+			"period" : "2048",
+			"max_periods" : "6",
+			"unit_buffer" : "4096"
+		}
+	},
+
+	"fl2" : {
+		"unit" : "FlacLoad",
+		"bindings" : {
+			"pause" : { "module": "LaunchControl" , "code":42 }
+		},
+
+		"config" : {
+			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
 			
-			"config" : {
-				"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
-				"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
-				"filename" : "/home/charlie/Brain in a Fish Tank.flac"
-				
-			},
+		}
 
-			"levels1" : {
-				"unit" : "Levels",
-				
-				"connections" : [
-					{ "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
-				],
+	},
 
-				"bindings" : {
-					"masterGain" : { "module": "LaunchControl" , "code":56 }
-				},
-
-				"echo1" : {
-					"unit" : "Echo",
-					"connections" :[
-						{ "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
-					],
-
-					"config" : {
-						"delay" : "500",
-						"decay" : "0.0"
-					},
-
-					"bindings" : {
-						"feedbackDecay" : { "module": "LaunchControl" , "code":36 }
-					},
-
-					"alsa1": {
-						"unit" : "Alsa",
-						"config": {
-							"period" : "2048",
-							"max_periods" : "6",
-							"unit_buffer" : "4096"
-						}
-					}
-				}
-			}
+	"levels2" : {
+		"unit" : "Levels",
+		"bindings" : { 
+			"masterGain" : { "module": "LaunchControl" , "code":57 } 
 		}
 	}
-	
 }
-
 }
