Updated config file

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -7,25 +7,21 @@
 	}
 },
 
-"midi": {
-	"LaunchControl" : "hw:1,0,0"
-},
-
 "rack": {
 	"mainlines" : [{"plug":"ac1"}, {"plug":"ac2"}],
 	"daisychains" : [
-		{ "from" : "rack", "plug" : "ac1", "unit" : "FlacLoad", "name" : "fl1", "jack" : "power" },
-		{ "from" : "rack", "plug" : "ac2", "unit" : "FlacLoad", "name" : "fl2", "jack" : "power" },
+		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
+		{ "from" : "rack", "plug" : "ac2", "to" : "fl2", "jack" : "power" },
 
-		{ "from" : "fl1", "plug": "audio_out", "unit": "Levels", "name" : "levels1", "jack": "audio" },
-		{ "from" : "fl2", "plug": "audio_out", "unit": "Levels", "name" : "levels2", "jack": "audio" },
+		{ "from" : "fl1", "plug": "audio_out", "to" : "levels1", "jack": "audio" },
+		{ "from" : "fl2", "plug": "audio_out", "to" : "levels2", "jack": "audio" },
 
-		{ "from" : "levels1", "plug": "audio_out", "unit": "ChannelMixer", "name" : "mixer1", "jack": "channel_1" },
-		{ "from" : "levels2", "plug": "audio_out", "unit": "ChannelMixer", "name" : "mixer1", "jack": "channel_2" },
+		{ "from" : "levels1", "plug": "audio_out", "to" : "mixer1", "jack": "channel_1" },
+		{ "from" : "levels2", "plug": "audio_out", "to" : "mixer1", "jack": "channel_2" },
 
-		{ "from" : "mixer1", "plug": "audio_out", "unit": "Echo", "name" : "echo1", "jack": "audio" }
+		{ "from" : "mixer1", "plug": "audio_out", "to" : "echo1", "jack": "audio" },
 
-		{ "from" : "echo1", "plug": "audio_out", "unit": "Alsa", "name" : "alsa1", "jack": "audio" }
+		{ "from" : "echo1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
 	"fl1" : {
@@ -78,8 +74,7 @@
 		},
 
 		"config" : {
-			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
-			
+			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac"
 		}
 
 	},
