Added midi device absence handling

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -6,7 +6,9 @@
 		"worker_us" : 250
 	}
 },
-
+"midi" : {
+	"LaunchControl" : "hw:1,0,0"
+},
 "rack": {
 	"mainlines" : [{"plug":"ac1"}, {"plug":"ac2"}],
 	"daisychains" : [
