Adding two channel mixing with variable gain on each channel

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -47,7 +47,10 @@
 	},
 
 	"mixer1" : {
-		"unit" : "ChannelMixer"
+		"unit" : "ChannelMixer",
+		"bindings" : {
+			"channelFade" : {"module" : "LaunchControl", "code" : 13}
+		}
 	},
 
 	"echo1" : {
