Added faders and gain to levels

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -42,7 +42,8 @@
 	"levels1" : {
 		"unit" : "Levels",
 		"bindings" : { 
-			"masterGain" : { "module": "LaunchControl" , "code":56 } 
+			"masterGain" : { "module": "LaunchControl" , "code":49 },
+			"fadeGain" : { "module": "LaunchControl" , "code":77 } 
 		}
 	},
 
@@ -87,7 +88,8 @@
 	"levels2" : {
 		"unit" : "Levels",
 		"bindings" : { 
-			"masterGain" : { "module": "LaunchControl" , "code":57 } 
+			"masterGain" : { "module": "LaunchControl" , "code":50 } ,
+			"fadeGain" : { "module": "LaunchControl" , "code":78 } 
 		}
 	}
 }
