Started playing with pitchbend

--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -13,9 +13,7 @@
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
 		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
-
 		{ "from" : "fl1", "plug": "audio_out", "to" : "pitch1", "jack": "audio" },
-
 		{ "from" : "pitch1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
@@ -26,9 +24,7 @@
 		},
 
 		"config" : {
-			"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
-			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
-			"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac"
 		}
 	},
 
@@ -42,7 +38,7 @@
 			"max_periods" : "6",
 			"unit_buffer" : "4096"
 		}
-	},
+	}
 
 }
 }
