--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -13,8 +13,8 @@
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
 		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
-		{ "from" : "fl1", "plug": "audio_out", "to" : "pitch1", "jack": "audio" },
-		{ "from" : "pitch1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
+		{ "from" : "fl1", "plug": "audio_out", "to" : "linear1", "jack": "audio" },
+		{ "from" : "linear1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
 	"fl1" : {
@@ -28,8 +28,8 @@
 		}
 	},
 
-	"pitch1" : {
-		"unit" : "PitchBender"
+	"linear1" : {
+		"unit" : "LinearInt"
 	},
 	"alsa1": {
 		"unit" : "Alsa",
