Midi responsive pitchbend

--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -29,7 +29,10 @@
 	},
 
 	"pitchbend1" : {
-		"unit" : "PitchBender"
+		"unit" : "PitchBender",
+		"bindings" : {
+			"pitchBend" : { "module":"LaunchControl", "code": 84 }
+		}
 	},
 	"alsa1": {
 		"unit" : "Alsa",
