Spiking effects are less obvious

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -15,8 +15,11 @@
 		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
 		{ "from" : "rack", "plug" : "ac2", "to" : "fl2", "jack" : "power" },
 
-		{ "from" : "fl1", "plug": "audio_out", "to" : "levels1", "jack": "audio" },
-		{ "from" : "fl2", "plug": "audio_out", "to" : "levels2", "jack": "audio" },
+		{ "from" : "fl1", "plug": "audio_out", "to" : "bend1", "jack": "audio" },
+		{ "from" : "fl2", "plug": "audio_out", "to" : "bend2", "jack": "audio" },
+
+		{ "from" : "bend1", "plug": "audio_out", "to" : "levels1", "jack": "audio" },
+		{ "from" : "bend2", "plug": "audio_out", "to" : "levels2", "jack": "audio" },
 
 		{ "from" : "levels1", "plug": "audio_out", "to" : "mixer1", "jack": "channel_1" },
 		{ "from" : "levels2", "plug": "audio_out", "to" : "mixer1", "jack": "channel_2" },
@@ -44,6 +47,13 @@
 		"bindings" : { 
 			"masterGain" : { "module": "LaunchControl" , "code":49 },
 			"fadeGain" : { "module": "LaunchControl" , "code":77 } 
+		}
+	},
+
+	"bend1" : {
+		"unit" : "PitchBender",
+		"bindings" : { 
+			"pitchBend" : { "module": "LaunchControl" , "code": 83 }
 		}
 	},
 
@@ -90,6 +100,13 @@
 		"bindings" : { 
 			"masterGain" : { "module": "LaunchControl" , "code":50 } ,
 			"fadeGain" : { "module": "LaunchControl" , "code":78 } 
+		}
+	},
+
+	"bend2" : {
+		"unit" : "PitchBender",
+		"bindings" : { 
+			"pitchBend" : { "module": "LaunchControl" , "code": 84 }
 		}
 	}
 }
