Micromanaged the thread cycles

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -3,7 +3,7 @@
 	"threads": {
 		"cycle" : 120,
 		"workers" : 6,
-		"worker_us" : 250
+		"worker_us" : 550
 	}
 },
 "midi" : {
@@ -24,9 +24,8 @@
 		{ "from" : "levels1", "plug": "audio_out", "to" : "mixer1", "jack": "channel_1" },
 		{ "from" : "levels2", "plug": "audio_out", "to" : "mixer1", "jack": "channel_2" },
 
-		{ "from" : "mixer1", "plug": "audio_out", "to" : "echo1", "jack": "audio" },
+		{ "from" : "mixer1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 
-		{ "from" : "echo1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
 	"fl1" : {
@@ -64,16 +63,6 @@
 		}
 	},
 
-	"echo1" : {
-		"unit" : "Echo",
-		"config" : { 
-			"delay" : "500", "decay" : "0.0" 
-		},
-		"bindings" : { 
-			"feedbackDecay" : { "module": "LaunchControl" , "code":36 } 
-		}
-	},
-	
 	"alsa1": {
 		"unit" : "Alsa",
 		"config": {
