Adding dependency management to units

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -35,9 +35,7 @@
 		},
 
 		"config" : {
-			"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac",
-			"filename" : "/home/charlie/library/music/bandcamp/Akara - Akara-Remixed/Akara - Akara-Remixed - 01 Projection (Kaminanda Remix).flac",
-			"filename" : "/home/charlie/Brain in a Fish Tank.flac"
+			"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
 		}
 	},
 
