Fixed config -- not loading other flac

--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -3,7 +3,7 @@
 	"threads": {
 		"cycle" : 120,
 		"workers" : 6,
-		"worker_us" : 550
+		"worker_us" : 350
 	}
 },
 "midi" : {
@@ -35,7 +35,7 @@
 		},
 
 		"config" : {
-			"filename" : "/home/charlie/KUBA - Summer Breezing - 01 Summer Breezing.flac"
+			"filename" : "/home/charlie/library/music/bandcamp/Dr Syntax - On The House (2013)/Dr Syntax - On The House - 01 Pyrotechnics (produced by Pitch).flac"
 		}
 	},
 
