--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -13,8 +13,8 @@
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
 		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
-		{ "from" : "fl1", "plug": "audio_out", "to" : "loop1", "jack": "audio" },
-		{ "from" : "loop1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
+		{ "from" : "fl1", "plug": "audio_out", "to" : "bender1", "jack": "audio" },
+		{ "from" : "bender1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
 	"fl1" : {
@@ -28,6 +28,9 @@
 		}
 	},
 
+	"bender1":{
+		"unit" : "PitchBender"
+	},
 	"loop1" : {
 		"unit" : "Loop",
 		"bindings" : {
