--- a/rackoonio.cfg
+++ b/rackoonio.cfg
@@ -21,8 +21,11 @@
 		{ "from" : "bend1", "plug": "audio_out", "to" : "levels1", "jack": "audio" },
 		{ "from" : "bend2", "plug": "audio_out", "to" : "levels2", "jack": "audio" },
 
-		{ "from" : "levels1", "plug": "audio_out", "to" : "mixer1", "jack": "channel_1" },
-		{ "from" : "levels2", "plug": "audio_out", "to" : "mixer1", "jack": "channel_2" },
+		{ "from" : "levels1", "plug": "audio_out", "to" : "echo1", "jack": "audio" },
+		{ "from" : "levels2", "plug": "audio_out", "to" : "echo2", "jack": "audio" },
+
+		{ "from" : "echo1", "plug": "audio_out", "to" : "mixer1", "jack": "channel_1" },
+		{ "from" : "echo2", "plug": "audio_out", "to" : "mixer1", "jack": "channel_2" },
 
 		{ "from" : "mixer1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 
@@ -94,6 +97,26 @@
 		"unit" : "PitchBender",
 		"bindings" : { 
 			"pitchBend" : { "module": "LaunchControl" , "code": 84 }
+		}
+	},
+
+	"echo2":{
+		"unit" : "Echo",
+		"bindings": {
+			"feedbackDecay" : { "module": "LaunchControl", "code": 36 }
+		},
+		"config" : {
+			"delay" : "500", "decay" : "0.0" 
+		}
+	},
+
+	"echo1":{
+		"unit" : "Echo",
+		"bindings": {
+			"feedbackDecay" : { "module": "LaunchControl", "code": 35 }
+		},
+		"config" : {
+			"delay" : "500", "decay" : "0.0" 
 		}
 	}
 }
