--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -2,7 +2,7 @@
 "system": {
 	"threads": {
 		"cycle" : 120,
-		"workers" : 6,
+		"workers" : 7,
 		"worker_us" : 250
 	}
 },
@@ -14,7 +14,9 @@
 	"daisychains" : [
 		{ "from" : "rack", "plug" : "ac1", "to" : "fl1", "jack" : "power" },
 		{ "from" : "fl1", "plug": "audio_out", "to" : "loop1", "jack": "audio" },
-		{ "from" : "loop1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
+		{ "from" : "loop1", "plug": "audio_out", "to" : "levels1", "jack": "audio" },
+		{ "from" : "levels1", "plug": "audio_out", "to" : "echo1", "jack": "audio" },
+		{ "from" : "echo1", "plug": "audio_out", "to" : "alsa1", "jack": "audio" }
 	],
 
 	"fl1" : {
@@ -28,8 +30,21 @@
 		}
 	},
 
-	"bender1":{
-		"unit" : "PitchBender"
+	"echo1":{
+		"unit" : "Echo",
+		"bindings": {
+			"feedbackDecay" : { "module": "LaunchControl", "code": 36 }
+		},
+		"config" : {
+			"delay" : "500", "decay" : "0.0" 
+		}
+	},
+	"levels1" : {
+		"unit" : "Levels",
+		"bindings" : { 
+			"masterGain" : { "module": "LaunchControl" , "code":49 },
+			"fadeGain" : { "module": "LaunchControl" , "code":77 } 
+		}
 	},
 	"loop1" : {
 		"unit" : "Loop",
