Reinit the flac loader works for loading another flac

--- a/unit_tester.cfg
+++ b/unit_tester.cfg
@@ -22,7 +22,8 @@
 	"fl1" : {
 		"unit" : "FlacLoad",
 		"bindings" : {
-			"pause" : { "module": "LaunchControl" , "code":41 }
+			"pause" : { "module": "LaunchControl" , "code":41 },
+			"load" : { "module": "LaunchControl" , "code":73 }
 		},
 
 		"config" : {
@@ -36,7 +37,7 @@
 			"feedbackDecay" : { "module": "LaunchControl", "code": 36 }
 		},
 		"config" : {
-			"delay" : "500", "decay" : "0.0" 
+			"delay" : "450", "decay" : "0.0" 
 		}
 	},
 	"levels1" : {
