Control freq with midi - bad distortion on transition

--- a/examples/sine.cfg
+++ b/examples/sine.cfg
@@ -18,6 +18,9 @@
 
 	"sine1" : {
 		"unit" : "Sine",
+		"bindings" : {
+			"freq" : { "module": "LaunchControl" , "code":17 }
+		},
 		"config" : {
 			"freq" : "3000",
 			"amplitude" : "4000"
