--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,9 +17,11 @@ add_executable( bin/tevents  Events.cpp)
 add_executable( bin/ttelemetry Telemetry.cpp)
 add_executable( bin/tnormalbuffer NormalisedSizeBuffer.cpp)
 add_executable( bin/tdelaybuffer DelayBuffer.cpp)
+add_executable( bin/tbasicrack BasicRack.cpp)
 add_executable( bin/tcache Cache.cpp)
 target_link_libraries ( bin/tevents  ${EXTRA_LIBS} )
 target_link_libraries ( bin/ttelemetry  ${EXTRA_LIBS} )
 target_link_libraries ( bin/tnormalbuffer  ${EXTRA_LIBS} )
 target_link_libraries ( bin/tdelaybuffer  ${EXTRA_LIBS} )
+target_link_libraries ( bin/tbasicrack  ${EXTRA_LIBS} )
 target_link_libraries ( bin/tcache  ${EXTRA_LIBS} )
