--- a/framework/Telemetry.h.in
+++ b/framework/Telemetry.h.in
@@ -1,5 +1,5 @@
 // setup telemetry here
-#define RACK_METRICS 0
+#define RACK_METRICS @RACK_TELEMETRY@
 #if RACK_METRICS
 	#define RACK_TELEMETRY(func, ...) {if(func){ func(__VA_ARGS__); }}
 #else
