Add start of plugin encapsulation

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -74,6 +74,7 @@ if(HOSTING_LV2)
 
 	set( SRC_HOSTING
 		${SRC_HOSTING}
+		${FWDIR}/hosting/lv2/LV2Plugin.cpp
 		${FWDIR}/hosting/lv2/LV2Platform.cpp
 	)
 
