Make RuSine a loadable unit stored in RuSine.rso

--- a/examples/sine.cfg
+++ b/examples/sine.cfg
@@ -17,7 +17,8 @@
 	],
 
 	"sine1" : {
-		"unit" : "Sine",
+		"unit" : "RuSine",
+		"library": "./RuSine.rso",
 		"bindings" : {
 			"freq" : { "module": "LaunchControl" , "code":17 }
 		},
