Abstract dynamic library loading; conditionally included native library class

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -67,6 +67,10 @@ set( SRC_THREADS
 	${FWDIR}/threads/RackQueue.cpp
 )
 
+set( SRC_DYNLIB
+	${FWDIR}/dynlib/LibraryLoader.cpp
+)
+
 set( SRC_HOSTING "")
 if(HOSTING_LV2)
 	set( EXTRA_LIBS ${EXTRA_LIBS} lilv-0 dl sratom-0 sord-0 serd-0 )
@@ -94,6 +98,7 @@ set( SRC_ALL
 	${SRC_FACTORIES}
 	${SRC_MEMORY}
 	${SRC_MIDI}
+	${SRC_DYNLIB}
 	${SRC_RACK}
 	${SRC_TELEMETRY}
 	${SRC_THREADS}
