Removed excess config settings

--- a/examples/impulse.cfg
+++ b/examples/impulse.cfg
@@ -1,14 +1,10 @@
 {
 "system": {
 	"threads": {
-		"cycle" : 120,
-		"workers" : 3,
-		"worker_us" : 250
+		"workers" : 3
 	}
 },
-"midi" : {
-	"LaunchControl" : "hw:1,0,0"
-},
+
 "rack": {
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
