--- a/examples/sine.cfg
+++ b/examples/sine.cfg
@@ -1,9 +1,7 @@
 {
 "system": {
 	"threads": {
-		"cycle" : 120,
 		"workers" : 3,
-		"worker_us" : 250
 	}
 },
 "midi" : {
@@ -23,8 +21,7 @@
 			"freq" : { "module": "LaunchControl" , "code":17 }
 		},
 		"config" : {
-			"freq" : "3000",
-			"amplitude" : "8000"
+			"freq" : "220"
 		}
 	},
 
