Describe rack configuration in a struct tree
The configuration is being separated out into a
separate are of the system. The description of
the rack is parsed into the struct tree, which
will be used to setup the rack.

This means the rack configuration is taken out
of the the rack class and implemented externally

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -44,6 +44,7 @@ set( SRC_MEMORY
 )
 
 set( SRC_RACK
+	${FWDIR}/rack/setup/RackDesc.cpp
 	${FWDIR}/rack/UnitConnectors.cpp
 	${FWDIR}/rack/RackUnit.cpp
 	${FWDIR}/rack/RackChain.cpp
