Include debugging flags to the tests

--- a/test/catch/Makefile
+++ b/test/catch/Makefile
@@ -2,7 +2,7 @@ all: routines config
 	echo "Built all"
 
 routines: Routines.cpp
-	g++ -std=c++11 -I../../ -L../../ -lstrangeio -o routines Routines.cpp
+	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o routines Routines.cpp
 
 config: Config.cpp
-	g++ -std=c++11 -I../../ -L../../ -lstrangeio -o config Config.cpp
+	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o config Config.cpp
