Rewrite rack config to use test units

--- a/test/catch/basic.cfg
+++ b/test/catch/basic.cfg
@@ -10,29 +10,29 @@
 "rack": {
 	"mainlines" : [{"plug":"ac1"}],
 	"daisychains" : [
-		{ "from" : "rack", "plug" : "ac1", "to" : "flac1", "jack" : "power" },
-		{ "from" : "flac1", "plug": "audio_out", "to" : "masterout", "jack": "audio" }
+		{ "from" : "rack", "plug" : "ac1", "to" : "main", "jack" : "power" },
+		{ "from" : "main", "plug": "audio_out", "to" : "masterout", "jack": "audio" }
 	],
 
-	"flac1" : {
-		"unit" : "SuFlacLoad",
-		"library": "./units/SuFlacLoad.rso",
+	"main" : {
+		"unit" : "MainlineUnit",
+		"library": "./units/MainlineUnit.rso",
 		"config" : {
-			"filename" : "test.flac"
+			"test_config" : "test_value"
 		},
 
 		"bindings" : {
-		"pause" : { "module": "LaunchControl" , "code":73 }
+		"exported" : { "module": "LaunchControl" , "code":73 }
 		}
 
 	},
 
 	"masterout": {
-		"unit" : "RuAlsa",
-		"library" : "./units/RuAlsa.rso",
+		"unit" : "OutputUnit",
+		"library" : "./units/OutputUnit.rso",
 		"config": {
-			"period" : "2048",
-			"max_periods" : "6",
+			"configuration" : "2048",
+			"configuration2" : "foobar",
 			"unit_buffer" : "4096"
 		}
 	}
