Include unit builder in makefile

--- a/test/catch/Makefile
+++ b/test/catch/Makefile
@@ -1,4 +1,4 @@
-all: routines config
+all: units routines config
 	echo "Built all"
 
 routines: Routines.cpp
@@ -6,3 +6,7 @@ routines: Routines.cpp
 
 config: Config.cpp
 	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o config Config.cpp
+
+units: units/MainlineUnit.cpp units/OutputUnit.cpp
+	unitbuild units/MainlineUnit units/MainlineUnit.cpp
+	unitbuild units/OutputUnit units/OutputUnit.cpp
