Add UnitLoading to Makefile

--- a/test/catch/Makefile
+++ b/test/catch/Makefile
@@ -1,4 +1,4 @@
-all: units routines config
+all: units routines unitloading config
 	echo "Built all"
 
 routines: Routines.cpp
@@ -6,6 +6,9 @@ routines: Routines.cpp
 
 config: Config.cpp
 	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o config Config.cpp
+
+unitloading: UnitLoading.cpp
+	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o unitloading UnitLoading.cpp
 
 units: units/MainlineUnit.cpp units/OutputUnit.cpp
 	unitbuild units/MainlineUnit units/MainlineUnit.cpp
