Add items to Makefile

--- a/test/catch/Makefile
+++ b/test/catch/Makefile
@@ -1,5 +1,5 @@
-all: units routines unitloading config
-	echo "Built all"
+all: routines unitloading config cycling
+	@echo "Built all"
 
 routines: Routines.cpp
 	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o routines Routines.cpp
@@ -10,6 +10,12 @@ config: Config.cpp
 unitloading: UnitLoading.cpp
 	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio -o unitloading UnitLoading.cpp
 
-units: units/MainlineUnit.cpp units/OutputUnit.cpp
-	unitbuild units/MainlineUnit units/MainlineUnit.cpp
-	unitbuild units/OutputUnit units/OutputUnit.cpp
+cycling: Cycling.cpp
+	g++ -ggdb -std=c++11 -I../../ -L../../ -lstrangeio units/TestingUnit.rso -o cycling Cycling.cpp
+
+units: FORCE_UNITS
+	unitbuild units/TestingUnit units/TestingUnit.cpp
+	unitbuild units/MainlineUnit units/TestingUnit.rso units/MainlineUnit.cpp
+	unitbuild units/OutputUnit units/TestingUnit.rso units/OutputUnit.cpp
+
+FORCE_UNITS:
